refactor(image,compat): externalize image, import, export, mvn, gradle into workers
Creates jk-image-runner and jk-compat-runner worker modules, removing
the last 7.8 MB of heavy third-party dependencies from the main binary.

jk-image-runner: ImageBuilder moves from the :image module into the
worker. :image loses its jib-core dependency and becomes a thin config-
record module (ImageConfig only). The worker fat JAR contains jib-core,
Guava, Google HTTP client, Apache httpclient, OpenCensus, and the entire
fasterxml.jackson 2.x stack — all of which were pulled in transitively
by jib-core. ImageCommand keeps the full build pipeline in-process;
only the write-image phase (tarball/push) forks the worker.

jk-compat-runner: A fat JAR containing all compat module classes plus
a CompatRunner entry point. Handles four commands:
  - import/export: fork worker for Maven/Gradle conversion; parent
    validates inputs and relays NDJSON "wrote" events to stdout
  - mvn/gradle: fork worker for distribution provisioning only; parent
    receives the bin path via NDJSON then execs with inheritIO directly
    so Maven/Gradle stdout reaches the terminal unmodified

The compat module itself stays in the binary (KotlinResolver,
ToolProvisioning, and friends are needed by CompileToolchain, DoctorCommand,
and ScriptRunner). The worker is an additive fat JAR that puts
import/export/mvn/gradle reachable code outside GraalVM's analysis tree.

After this change, guava, jib-core, fasterxml.jackson (2.x), Apache
httpclient+httpcore, opencensus, and all their transitive deps are
absent from the cli runtimeClasspath. Combined with the earlier
publish-runner and audit-runner extractions, the total removed from the
binary is: bouncycastle, sigstore-java, cyclonedx, spdx, Jackson 3 (was
supply-chain explicit dep), and now the entire Jib/Guava/Google stack.